--- a/index.html
+++ b/index.html
@@ -26,18 +26,25 @@
     <body>
 
 		<div class="container">
+			<div class="row-fluid">
+				<div class="span12" id="app-canvas">
 
-			<!--[if lt IE 7]>
-				<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-			<![endif]-->
+					<!--[if lt IE 7]>
+						<p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+					<![endif]-->
 
-			<!-- Add your site or application content here -->
+					<!-- Add your site or application content here -->
+				</div>
+			</div>
 		</div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.2.min.js"><\/script>')</script>
         <script src="js/vendor/plugins.js"></script>
 		<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+
+		<!-- Main RequireJS AMD -->
+		<script data-main="js/main" src="js/lib/require/require.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
