Adding Build and Build Script.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 		<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
 
 		<!-- Main RequireJS AMD -->
-		<script data-main="js/main" src="js/lib/require/require.js"></script>
+		<!--<script data-main="js/main" src="js/lib/require/require.js"></script>--> <!-- development -->
+		<script data-main="dist/main" src="js/lib/require/require.js"></script> <!-- production -->
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
         <script>
