Update Lib, and adding XHR for IE < 10.

--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
     <!-- Main RequireJS AMD -->
 
     <!-- development -->
-    <script data-main="js/main" src="js/lib/require/require.js"></script>
+    <script data-main="js/main" src="js/lib/require/require.min.js"></script>
 
     <!-- production -->
-    <!--<script data-main="dist/main" src="js/lib/require/require.js"></script>-->
+    <!--<script data-main="dist/main" src="dist/lib/require/require.min.js"></script>-->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
