Update Thorax to Version 2.0.1
Update Thorax to 2.0.1

--- a/index-dev.html
+++ b/index-dev.html
@@ -9,7 +9,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Production</title>
+    <title>Development</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -61,8 +61,8 @@
 
     <!-- Main RequireJS AMD -->
 
-    <!-- production -->
-    <script data-main="dist/main" src="dist/lib/require/require.js"></script>
+    <!-- development -->
+    <script data-main="js/main" src="js/lib/require/require.js"></script>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
